some fixes related to page spacing/add loader and disable the next btn in question navigation in testPass page

--- a/src/features/answerManagement/view/QuestionOption.module.scss
+++ b/src/features/answerManagement/view/QuestionOption.module.scss
@@ -191,7 +191,7 @@
     &.correct span:last-child,
     &.incorrect span:last-child,
     &.correctAnswer span:last-child {
-        color: #0f172a;
+        color: white;
         font-weight: 600;
     }
 }
