--- a/src/widgets/testPlayer/view/TestPlayer.module.scss
+++ b/src/widgets/testPlayer/view/TestPlayer.module.scss
@@ -6,7 +6,7 @@
     flex-wrap: wrap;
     gap: 24px;
     position: relative;
-    padding: 32px 0;
+    padding-top: 100px;
 
     &::before {
         content: '';
